2016-07-16  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftoepdf.cc: Use zround(stemV->getNum()) instead of stemV->getInt()
	in epdf_create_fontdescriptor(), since the value of stemV may be real
	in general.

2016-06-12  Karl Berry  <karl@freefriends.org>
        and Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* utils.c (last_match_succeeded): new static boolean.
	(matchstrings): set it.
	(getmatch): use it, plus check for non-NULL match_string sooner,
	plus check that rm_eo >= rm_so.
	Original bug report from David Carlisle,
        http://tug.org/pipermail/tex-live/2016-June/038664.html

2016-05-20  Karl Berry  <karl@tug.org>

	* TeX Live 2016 release.

2016-04-06  Karl Berry  <karl@tug.org>

	* pdftexextra.h (COPYRIGHT_HOLDER): don't specifically mention peb
	and e-TeX, as there are many other copyright holders of other pieces
	anyway, and Peter passed away in 2015.

2016-03-24  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* writet1.c: Fix one-byte buffer overflow bug reported by Hanno Boeck:
	http://tug.org/pipermail/tex-live/2016-January/037686.html.

2016-03-21  Karl Berry  <karl@tug.org>

	* NEWS,
	* pdftex_version.h,
	* pdftex.web (pdftex_revision, pdftex_version_string): [1.40.]17
	for TL'16.

2016-02-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftex.web, pdftoepdf.cc: Add \pdfsuppressptexinfo, imported from
	the upstream.

2016-01-19  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftex.web: Avoid to crash for unusual virtual fonts which lead to
	font size >= 2048pt.

2015-08-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/libpdftex.am, am/pdftosrc.am: Enable g++ warnings.
	* pdftoepdf.cc, pdftosrc.cc: Avoid g++ warnings.
	* tounicode.c: Avoid gcc warnings.

2015-07-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ptexmac.h: Avoid possible integer overflow.
	* writettf.h: No reason to use 'long' for 32-bit integers.
	* writettf.c: No reason to use the (possibly 64-bit) 'integer'.

2015-07-10  Peter Breitenlohner  <peb@mppmu.mpg.de>
