@@ -1,3 +1,7 @@
+2016-11-05  Karl Berry  <karl@tug.org>
+
+	* pdftoepdf.cc: doc fix.
+
 2016-07-16  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* pdftoepdf.cc: Use zround(stemV->getNum()) instead of stemV->getInt()
